Fix an overflow issue

--- a/stylesheets/application.css
+++ b/stylesheets/application.css
@@ -381,7 +381,7 @@ div.details {
 	padding: 20px;
 	margin-bottom: 6px;
 	border: 1px solid #D7D7D7;
-	margin: -11px -11px 15px -11px;
+	margin: -11px -10px 15px -10px;
 }
 
 div.issue.tooltip {
